[package]
name = "throttle"
version = "0.1.0"
authors = ["Markus Klein <markus.klein@blue-yonder.com>"]
edition = "2018"
license = "MIT"
publish = true

[dependencies]
actix-web = "2.0.0"
structopt = "0.3.9"
structopt-derive = "0.4.2"
prometheus = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.8"
gelf = "0.5.0"
serde = "1.0.104"
serde_json = "1.0.48"
failure = "0.1.6"
actix-rt = "1.0.0"
toml = "0.5.6"
rand = "0.7.3"
env_logger = "0.7.1"
humantime-serde = "1.0.0"
