[package]
name = "throttle"
version = "0.1.0"
authors = ["Markus Klein <markus-klein@live.de>"]
edition = "2018"
license = "MIT"
publish = true

# Link to github repository
repository = "https://github.com/pacman82/throttle.git"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Provide semaphores for distributed systems via an http interface"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["semaphore", "http", "service"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["concurrency"]

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

[dependencies]
actix-web = "2.0.0"
structopt = "0.3.11"
structopt-derive = "0.4.4"
prometheus = "0.8.0"
lazy_static = "1.4.0"
gelf = "0.5.0"
serde = "1.0.104"
serde_json = "1.0.48"
failure = "0.1.6"
actix-rt = "1.0.0"
toml = "0.5.6"
rand = "0.7.3"
env_logger = "0.7.1"
humantime-serde = "1.0.0"

[dependencies.log]
version = "0.4.8"
features = ["serde"]