[project]
name = "throttle_client"
version = "0.5.9"
authors = [{ name = "Markus Klein " }]
license = { text = "MIT License" }
description = "Client for Throttle. Throttle is an http semaphore service, providing semaphores for distributed systems."
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests", "tenacity"
]

[project.urls]
Repository = "https://github.com/pacman82/throttle.git"

[tool.setuptools.packages.find]
where = ["python_client"]

[dependency-groups]
dev = ["pytest"]
