[package]
name = "throttle-client"
version = "0.1.0"
authors = ["Markus Klein <markus-klein@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10.4", features=["json"] }
thiserror = "1.0.19"
humantime-serde = "1.0.0"
serde = "1.0.110"
humantime = "2.0.0"

